# appuracao

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
apps/docs/: astro.config.mjs  package-lock.json  package.json
apps/docs/src/styles/: custom.css
backend/: config.py
backend/crypto/: hasher.py  keys.py  verifier.py
backend/lambdas/: assemble_handler.py  deduplicate_handler.py  parse_handler.py  publish_handler.py  store_handler.py  tally_handler.py  verify_handler.py
backend/qrcode/: assembler.py  models.py  parser.py
backend/storage/: dynamodb.py  s3.py
backend/tallying/: aggregator.py  summary.py
docs/: ARCHITECTURE.md  SECURITY-CHECKLIST.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.storybook/: main.js  preview.js
frontend/src/__mocks__/: html5-qrcode.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/results/: page.tsx
frontend/src/components/: BulletinCard.stories.tsx  BulletinCard.tsx  QrScanner.stories.tsx  QrScanner.tsx  ResultsTable.stories.tsx  ResultsTable.tsx
frontend/src/lib/: api.ts  types.ts
infrastructure/: samconfig.toml  template.yaml
infrastructure/statemachine/: bulletin_processing.asl.json
infrastructure/vtl/: request_mapping.vtl  response_mapping.vtl
scripts/: fetch_complementary.py  fetch_tse_keys.py
tests/: conftest.py  test_assembler.py  test_handlers.py  test_hasher.py  test_parser.py  test_verifier.py
(+21 files in other folders)
