[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "appuracao"
version = "0.1.0"
description = "Apuração paralela de votos via QR Code do Boletim de Urna"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pynacl>=1.5",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "moto[dynamodb,s3]>=5.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
